--- a/deno.json
+++ b/deno.json
@@ -5,7 +5,7 @@
     "build": "deno run -A dev.ts build",
     "start": "deno run -A main.ts",
     "update": "deno run -A -r jsr:@fresh/update .",
-    "help": "deno run -A tasks/help.ts"
+    "init": "deno run -A tasks/init.ts"
   },
   "lint": { "rules": { "tags": ["fresh", "recommended"] } },
   "exclude": ["**/_fresh/*"],
@@ -21,5 +21,6 @@
     "jsx": "precompile",
     "jsxImportSource": "preact",
     "jsxPrecompileSkipElements": ["a", "img", "source", "body", "html", "head"]
-  }
+  },
+  "unstable": ["kv"]
 }
