disable deno lock file

--- a/deno.json
+++ b/deno.json
@@ -23,5 +23,6 @@
     "jsxImportSource": "preact",
     "jsxPrecompileSkipElements": ["a", "img", "source", "body", "html", "head"]
   },
-  "unstable": ["kv"]
+  "unstable": ["kv"],
+  "lock": false
 }
