--- a/deno.json
+++ b/deno.json
@@ -6,7 +6,8 @@
     "start": "deno run -A main.ts",
     "update": "deno run -A -r jsr:@fresh/update .",
     "init": "deno run -A tasks/init.ts",
-    "open": "deno run -A tasks/open.ts"
+    "open": "deno run -A tasks/open.ts",
+    "template": "deno run -A tasks/template.ts"
   },
   "lint": { "rules": { "tags": ["fresh", "recommended"] } },
   "exclude": ["**/_fresh/*"],
