--- a/deno.json
+++ b/deno.json
@@ -1,22 +1,27 @@
 {
   "tasks": {
-    "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
-    "dev": "deno run -A --watch=static/,routes/ tasks/dev.ts",
-    "build": "deno run -A tasks/dev.ts build",
-    "start": "deno run -A main.ts",
-    "update": "deno run -A -r jsr:@fresh/update .",
-    "init": "deno run -A tasks/init.ts",
-    "open": "deno run -A tasks/open.ts",
-    "template": "deno run -A tasks/template.ts"
+    "check": "deno fmt --env --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
+    "dev": "deno run -A --env --watch=static/,routes/ tasks/dev.ts",
+    "build": "deno run -A --env tasks/dev.ts build",
+    "start": "deno run -A --env main.ts",
+    "update": "deno run -A --env -r jsr:@fresh/update .",
+    "init": "deno run -A --env tasks/init.ts",
+    "open": "deno run -A --env tasks/open.ts",
+    "template": "deno run -A --env tasks/template.ts",
+    "db:reset": "deno run -A --env tasks/db_reset.ts",
+    "stripe:init": "deno run -A --env tasks/stripe_init.ts"
   },
   "lint": { "rules": { "tags": ["fresh", "recommended"] } },
   "exclude": ["**/_fresh/*"],
   "imports": {
     "@/": "./",
-    "fresh": "jsr:@fresh/core@^2.0.0-alpha.22",
     "@fresh/plugin-tailwind": "jsr:@fresh/plugin-tailwind@^0.0.1-alpha.7",
+    "@preact/signals": "npm:@preact/signals@^1.3.0",
+    "@std/assert": "jsr:@std/assert@^1.0.7",
+    "@std/http": "jsr:@std/http@^1.0.9",
+    "fresh": "jsr:@fresh/core@^2.0.0-alpha.22",
     "preact": "npm:preact@^10.24.2",
-    "@preact/signals": "npm:@preact/signals@^1.3.0"
+    "stripe": "npm:stripe@^17.3.1"
   },
   "compilerOptions": {
     "lib": ["dom", "dom.asynciterable", "deno.ns"],
