added manifest to head

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Cryptus",
+    "name": "Fresh Template",
     "start_url": "/",
     "lang": "en-US",
     "theme_color": "#2596be",
