--- a/deno.jsonc
+++ b/deno.jsonc
@@ -17,9 +17,9 @@
     "@preact/signals": "npm:@preact/signals@^1.3.0",
     "@std/assert": "jsr:@std/assert@^1.0.7",
     "@std/http": "jsr:@std/http@^1.0.9",
-    "fresh": "jsr:@fresh/core@^2.0.0-alpha.22",
+    "fresh": "jsr:@fresh/core@^2.0.0-alpha.25",
     "node-mailjet": "npm:node-mailjet@^6.0.6",
-    "preact": "npm:preact@^10.24.2",
+    "preact": "npm:preact@^10.24.3",
     "stripe": "npm:stripe@^17.3.1"
   },
   "compilerOptions": {
@@ -30,10 +30,5 @@
   },
   "unstable": ["kv"],
   "lock": false,
-  "fmt": {
-    "lineWidth": 100,
-    "semiColons": true,
-    "singleQuote": true,
-    "proseWrap": "preserve"
-  }
+  "fmt": { "lineWidth": 100, "semiColons": true, "singleQuote": true, "proseWrap": "preserve" }
 }
