add page transitions

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,7 +1,7 @@
 {
   "tasks": {
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
-    "dev": "deno run -A --env --watch=static/,routes/ tasks/dev.ts",
+    "dev": "deno run -A --env --watch=static/,routes/,css/ tasks/dev.ts",
     "build": "deno run -A --env tasks/dev.ts build",
     "start": "deno run -A --env main.ts",
     "update": "deno run -A --env -r jsr:@fresh/update .",
