--- a/deno.jsonc
+++ b/deno.jsonc
@@ -17,6 +17,7 @@
     "@preact/signals": "npm:@preact/signals@^1.3.0",
     "@std/assert": "jsr:@std/assert@^1.0.7",
     "@std/http": "jsr:@std/http@^1.0.9",
+    "@types/web-push": "npm:@types/web-push@^3.6.4",
     "fresh": "jsr:@fresh/core@^2.0.0-alpha.25",
     "marked": "npm:marked@^15.0.0",
     "node-mailjet": "npm:node-mailjet@^6.0.6",
