--- a/deno.jsonc
+++ b/deno.jsonc
@@ -6,6 +6,7 @@
     "start": "deno run -A --env main.ts",
     "update": "deno run -A --env -r jsr:@fresh/update .",
     "init": "deno run -A --env tasks/init.ts",
+    "screenshot": "deno run -A --env tasks/screenshot.ts",
     "db:reset": "deno run -A --env tasks/db_reset.ts",
     "stripe:init": "deno run -A --env tasks/stripe_init.ts"
   },
