--- a/.env.template
+++ b/.env.template
@@ -1,15 +1,20 @@
+# Enable cron feature to prevent issue with github actions
 CRON=1
 
+# Stripe
 STRIPE_SECRET_KEY=
 STRIPE_PREMIUM_PLAN_PRICE_ID=
 STRIPE_WEBHOOK_SECRET=
 
+# OpenAI API Keys
+AI_URL=
 AI_API_KEY=
 AI_MODEL=
-AI_URL=
 
+# Mailjet API keys
 MJ_APIKEY_PUBLIC=
 MJ_APIKEY_PRIVATE=
 
+# For push notifications
 VAPID_PUBLIC_KEY=
 VAPID_PRIVATE_KEY=
