--- a/.env.template
+++ b/.env.template
@@ -1,17 +1,17 @@
 # Stripe
-STRIPE_SECRET_KEY=
-STRIPE_PREMIUM_PLAN_PRICE_ID=
-STRIPE_WEBHOOK_SECRET=
+# STRIPE_SECRET_KEY=
+# STRIPE_PREMIUM_PLAN_PRICE_ID=
+# STRIPE_WEBHOOK_SECRET=
 
 # OpenAI API Keys
-AI_URL=
-AI_API_KEY=
-AI_MODEL=
+# AI_URL=
+# AI_API_KEY=
+# AI_MODEL=
 
 # Mailjet API keys
-MJ_APIKEY_PUBLIC=
-MJ_APIKEY_PRIVATE=
+# MJ_APIKEY_PUBLIC=
+# MJ_APIKEY_PRIVATE=
 
 # For push notifications
-VAPID_PUBLIC_KEY=
-VAPID_PRIVATE_KEY=
+# VAPID_PUBLIC_KEY=
+# VAPID_PRIVATE_KEY=
