--- a/deno.jsonc
+++ b/deno.jsonc
@@ -7,6 +7,7 @@
     "update": "deno run -A --env -r jsr:@fresh/update .",
     "init": "deno run -A --env tasks/init.ts",
     "screenshot": "deno run -A --env tasks/screenshot.ts",
+    "generate": "deno run -A --env tasks/generate.ts",
     "db:reset": "deno run -A --env tasks/db_reset.ts",
     "stripe:init": "deno run -A --env tasks/stripe_init.ts"
   },
