--- a/.env.template
+++ b/.env.template
@@ -1,17 +1,17 @@
-# Stripe
+## Stripe
 # STRIPE_SECRET_KEY=
 # STRIPE_PREMIUM_PLAN_PRICE_ID=
 # STRIPE_WEBHOOK_SECRET=
 
-# OpenAI API Keys
+## OpenAI API
 # AI_URL=
 # AI_API_KEY=
 # AI_MODEL=
 
-# Mailjet API keys
+## Mailjet API keys
 # MJ_APIKEY_PUBLIC=
 # MJ_APIKEY_PRIVATE=
 
-# For push notifications
+## Push Notifications
 # VAPID_PUBLIC_KEY=
 # VAPID_PRIVATE_KEY=
