rename AI_ env to OAI_

--- a/.env.template
+++ b/.env.template
@@ -4,9 +4,9 @@
 # STRIPE_WEBHOOK_SECRET=
 
 ## OpenAI API
-# AI_URL=
-# AI_API_KEY=
-# AI_MODEL=
+# OAI_URL=
+# OAI_API_KEY=
+# OAI_MODEL=
 
 ## Mailjet API keys
 # MJ_APIKEY_PUBLIC=
