--- a/deno.jsonc
+++ b/deno.jsonc
@@ -26,6 +26,7 @@
     "@fresh/plugin-tailwind": "jsr:@fresh/plugin-tailwind@^0.0.1-alpha.7",
     "@preact/signals": "npm:@preact/signals@^1.3.0",
     "@std/assert": "jsr:@std/assert@^1.0.7",
+    "@std/async": "jsr:@std/async@^1.0.9",
     "@std/http": "jsr:@std/http@^1.0.9",
     "fresh": "jsr:@fresh/core@^2.0.0-alpha.25",
     "marked": "npm:marked@^15.0.0",
