update openai imports

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -30,6 +30,7 @@
     "fresh": "jsr:@fresh/core@^2.0.0-alpha.25",
     "marked": "npm:marked@^15.0.0",
     "node-mailjet": "npm:node-mailjet@^6.0.6",
+    "openai": "npm:openai@^4.76.3",
     "preact": "npm:preact@^10.24.3",
     "stripe": "npm:stripe@^17.3.1",
     "web-push": "npm:web-push@^3.6.7"
