--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,7 +2,7 @@
   "tasks": {
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
     "dev": "deno run -A --env --watch=static/,routes/,css/ tasks/dev.ts",
-    "build": "deno run -A --env tasks/dev.ts build",
+    "build": "deno run -A --env tasks/build.ts",
     "start": "deno run -A --env main.ts",
     "update": "deno run -A --env -r jsr:@fresh/update .",
     "assets": "deno run -A --env tasks/assets-gen.ts",
