--- a/deno.jsonc
+++ b/deno.jsonc
@@ -31,7 +31,8 @@
     "openai": "npm:openai@^4.76.3",
     "preact": "npm:preact@^10.24.3",
     "stripe": "npm:stripe@^17.3.1",
-    "web-push": "npm:web-push@^3.6.7"
+    "web-push": "npm:web-push@^3.6.7",
+    "tabler-icons/": "https://deno.land/x/tabler_icons_tsx@0.0.4/tsx/"
   },
   "compilerOptions": {
     "lib": [
