fixed all type errors

--- a/.env.template
+++ b/.env.template
@@ -4,9 +4,9 @@
 # STRIPE_WEBHOOK_SECRET=
 
 ## OpenAI API
-# OAI_URL=
-# OAI_API_KEY=
-# OAI_MODEL=
+# OPENAI_API_KEY=ollama
+# OPENAI_MODEL=llama3.2:1b
+# OPENAI_API_BASE=http://localhost:11434/v1
 
 ## Mailjet API keys
 # MJ_APIKEY_PUBLIC=
