--- a/deno.jsonc
+++ b/deno.jsonc
@@ -33,7 +33,7 @@
     "preact-render-to-string": "npm:preact-render-to-string@^6.5.13",
     "stripe": "npm:stripe@^17.3.1",
     "web-push": "npm:web-push@^3.6.7",
-    "tabler-icons/": "https://icons.church/tabler/"
+    "icons/": "https://icons.church/"
   },
   "compilerOptions": {
     "lib": [
