--- a/deno.jsonc
+++ b/deno.jsonc
@@ -10,15 +10,10 @@
   },
   "lint": {
     "rules": {
-      "tags": [
-        "fresh",
-        "recommended"
-      ]
+      "tags": ["fresh", "recommended"]
     }
   },
-  "exclude": [
-    "**/_fresh/*"
-  ],
+  "exclude": ["**/_fresh/*"],
   "imports": {
     "@/": "./",
     "@preact/signals": "npm:@preact/signals@^1.3.0",
@@ -37,26 +32,12 @@
     "icons/": "https://icons.church/"
   },
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.asynciterable",
-      "deno.ns"
-    ],
+    "lib": ["dom", "dom.asynciterable", "deno.ns"],
     "jsx": "precompile",
     "jsxImportSource": "preact",
-    "jsxPrecompileSkipElements": [
-      "a",
-      "img",
-      "source",
-      "body",
-      "html",
-      "head"
-    ]
+    "jsxPrecompileSkipElements": ["a", "img", "source", "body", "html", "head"]
   },
-  "unstable": [
-    "kv",
-    "cron"
-  ],
+  "unstable": ["kv", "cron"],
   "lock": false,
   "fmt": {
     "lineWidth": 120,
