--- a/deno.jsonc
+++ b/deno.jsonc
@@ -10,14 +10,18 @@
   },
   "lint": {
     "rules": {
-      "tags": ["fresh", "recommended"]
+      "tags": [
+        "fresh",
+        "recommended"
+      ]
     }
   },
-  "exclude": ["**/_fresh/*"],
+  "exclude": [
+    "**/_fresh/*"
+  ],
   "imports": {
     "@/": "./",
     "@preact/signals": "npm:@preact/signals@^1.3.0",
-    "@std/assert": "jsr:@std/assert@^1.0.7",
     "@std/async": "jsr:@std/async@^1.0.9",
     "@std/http": "jsr:@std/http@^1.0.9",
     "@std/yaml": "jsr:@std/yaml@^1.0.5",
@@ -32,12 +36,26 @@
     "icons/": "https://icons.church/"
   },
   "compilerOptions": {
-    "lib": ["dom", "dom.asynciterable", "deno.ns"],
+    "lib": [
+      "dom",
+      "dom.asynciterable",
+      "deno.ns"
+    ],
     "jsx": "precompile",
     "jsxImportSource": "preact",
-    "jsxPrecompileSkipElements": ["a", "img", "source", "body", "html", "head"]
+    "jsxPrecompileSkipElements": [
+      "a",
+      "img",
+      "source",
+      "body",
+      "html",
+      "head"
+    ]
   },
-  "unstable": ["kv", "cron"],
+  "unstable": [
+    "kv",
+    "cron"
+  ],
   "lock": false,
   "fmt": {
     "lineWidth": 120,
